--- a/pm2.yml
+++ b/pm2.yml
@@ -4,6 +4,6 @@ apps:
     log_date_format : 'YYYY-MM-DD HH:mm:ss'
     env    :
       ZONE: test.com
-      HOSTNAME: subdomain.test.com
+      HOSTNAMES: ['subdomain.test.com']
       EMAIL: admin@test.com
       TOKEN: 213fw3dsf4terqsdg4sdfsd
