--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Hudson Leão",
   "license": "ISC",
   "dependencies": {
+    "commander": "^6.2.1",
     "cron": "^1.8.2",
     "node-fetch": "^2.6.1",
     "public-ip": "^4.0.2"
